Fixed layout issue and added success page

--- a/src/pages/PublishASong/style.css
+++ b/src/pages/PublishASong/style.css
@@ -20,26 +20,27 @@
     color: white;
     padding: 10px 0px 15px 15px;
 }
-.publishingSection {
+.row {
+    display: flex;
     background-color: #1C1C1C;
     padding: 15px;
-    color: rgb(226, 226, 226);
     height: 78vh;
-}
-.publishingSection img {
-    width: 375px;
-    height: 375px;
+    color: rgb(226, 226, 226);
+} 
+.column {
+    flex: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+.row img {
+    width: 400px;
+    height: 400px;
     padding-top: 30px;
 }
 .inputForm {
     padding: 15px;
     /* flex-direction: column; */
 }
-.row {
-    display: flex;
-    /* flex-direction:row; */
-    width:100%;
-} 
 .row input {
     height: 40px;
     width: 250px;
@@ -48,8 +49,12 @@
 }
 .upload {
     background-color: #DE5F3B;
+    display: flex;
+    align-items: center;
+    padding: 10px 0px 0px 10px;
 } 
 .publish {
     background-color: #6F44EE;
     width: 200px;
+    margin-left: -1px;
 } 
